build: ajustes na definição do ESLint e Prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,5 +9,5 @@
   "bracketSameLine": false,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "endOfLine": "auto"
 }
